2007-04-24  Andreas Fink <andreas at fink.org>
   * gwlib/gwlib.c: call log_init before http_init and socket_init so error
     messages from those init calls actually are able to appear on the screen
     instead of crashing bearerbox at start. Reported under MacOS X by
     Alejandro Guerrieri. Only happened if hostname was not set.
     ERROR: Can't find out official hostname for this host, using `xyz' instead.
     was being sent to a logfile not open... -> crash

2007-04-20  Stipe Tolj  <stolj at kannel.org>
   * aclocal.m4: fixed typo and updated email references. NLC.
   * Makefile.in: adding creation of symlink for 'gw-config' if we have used
     '--with-suffix' while configure, otherwise gw-config is also appended
     with suffix string and it does not comply with external components
     depending to find a 'gw-config' in the PATH and use the cflags and libs
     information for their own builds against Kannel libs. This is safe now
     for both, w/o suffix.

2007-04-18 Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_boxc.c, gw/bb_smscconn.c, gw/bb_smscconn_cb.h,
     gw/bearerbox.c, gw/bearerbox.h, gwlib/cfg.def: applied patch that implements
     outgoing queue (MT) limit.

2007-04-18 Alexander Malysh <amalysh at kannel.org>
   * gwlib/mime.c: applied patch should help take care of issues where the
     Content-ID for the start element is enclosed in '<' '>'.
     Thanks to Paul Bagyenda <bagyenda at dsmagic.com> for the patch.
     [Msg-Id: <D4225F55-C681-4B36-B383-67B8B9C7DE46@dsmagic.com>]

2007-04-16  Stipe Tolj  <stolj at kannel.org>
   * gw/smsc/smsc_http.c: fixing default charset encoding policy in chaining
     Kannel instances via 'system-type = kannel'. As we use now UTF-8 as
     internal encoding, but still WINDOWS-1252 as default encoding for 
     smsbox's sendsms HTTP interace, we need to forward explicetly the CGI
     variable charset to the next instance here to let the smsbox know that